# Algorithm

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
include/: InsertSort.h  MergeSort.h  Stack.h  StackSort.h  Tree.h  common.h
simple/: README.md
src/: BTree.c  InsertSort.c  List.c  MarkSweep.c  MaxMin.c  MergeSort.c  QuickSort.c  Stack.c  StackSort.c  Tree.c
src/inc/: common.h
test/: Makefile  test_InsertSort.c  test_MergeSort.c
tools/: list.c  list.h
